# manual-tls

./: LICENSE  README.md  client.py  pyproject.toml
certs/: root_ca.crt  root_ca.key  watsug.crt  watsug.key
manual_tls/: manual_tls.py
