[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manual_tls"
version = "0.0.2"
authors = [
  { name="Alexander Bersenev / Adam Augustyn", email="watsug@gmail.com" },
]
description = "A tiny TLS 1.3 pure Python implementation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "ecdsa"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/watsug/manual-tls"
Issues = "https://github.com/watsug/manual-tls"